--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require-dev": {
         "pestphp/pest": "^1.22",
-        "phpstan/phpstan": "^1.8"
+        "laravel/pint": "^1.2",
+        "phpstan/phpstan": "^1.9"
     },
     "config": {
         "allow-plugins": {
